# ii

./: .gitmodules  build.sh  test.sh
lab1/: .clang-tidy  CMakeLists.txt
lab1/lab1/: CMakeLists.txt
lab1/lab1/libfts/: CMakeLists.txt  fts.cpp  fts.hpp  fts.test.cpp
lab1/lab1/main/: CMakeLists.txt  main.cpp
